--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.8.4",
     "daisyui": "^5.0.27",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
