--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_AXIOS_BASE_URL=https://event-management-app-backend-rhp7.onrender.com/api/v1
+VITE_AXIOS_BASE_URL="https://event-management-app-abrar-backend.vercel.app/api"
